2002-05-17  Muktha  <muktha.narayan@wipro.com>

	* src/gtkhex.c: Enable selection through keyboard.

2002-05-13  Pablo Saratxaga  <pablo@mandrakesoft.com>

	* configure.in: Added Vietnamese (vi) file

2002-05-11  Jaka Mocnik  <jaka@gnu.org>
 	* Accessibility changes by Muktha  <muktha.narayan@wipro.com>
 	Files changed : configure.in src/Makefile.am main.c
 			gtkhex.h gtkhex.c findreplace.c converter.c
 			preferences.c chartable.c
 	New files : factory.h factory.c accessiblegtkhexfactory.h
 		    accessiblegtkhexfactory.c accessiblegtkhex.h
 		    accessiblegtkhex.c 			

2002-05-08  Sander Vesik  <sander.vesik@sun.com>

	* New, xml based help docs for C locale

2002-05-03  Shivram U  <shivaram.upadhyayula@wipro.com>

	* src/preference.c : Enabled "Help" button in the preferences dialog.
	On clicking the "Help" button the main help page for Ghex will be
	displayed. This has to be fixed to display the preferences section in
	the Help. Partial fix for #71456.

2002-04-29  Shivram U  <shivaram.upadhyayula@wipro.com>

	* src/gtkhex.c (get_max_char_width): Only displayable characters are
	used for calculating max char width. Fixes the pango warnings 
	generated when opening a file (Bug #76294)

2002-04-29  Shivram U  <shivaram.upadhyayula@wipro.com>

	* src/ui.c, src/converter.c: Fixed problem with disabling and enabling
	"Get cursor value" button while closing and opening files.	

2002-04-26  Shivram U  <shivaram.upadhyayula@wipro.com>

	* src/ghex-ui.xml: Fixed Help menu as per usability issues mentioned
	in #79251.
	* src/main.c: Fixed the name of the program passed in gnome_program_init
	It was "ghex" in the help patch. Changed to "ghex2" as the executable
	name is "ghex2". This was eariler causing a problem for restoring a 
	session.
	* help/(lang)/Makefile.am: Renamed app to ghex2. Added ghex2.sgml files

2002-04-24  Satyajit K  <satyajit.kanungo@wipro.com>

	Reviewed by Shivram U  <shivaram.upadhyayula@wipro.com>
